[metadata]
# replace with your username:
name = dtfe
version = 0.0.1
author = Job Feldbrugge, Johan Hidding
author_email = jfeldbrugge@perimeterinstitute.ca
description = The Delaunay Triangulation Field Estimator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfeldbrugge/dtfe
project_urls =
    Bug Tracker = https://github.com/jfeldbrugge/dtfe/issues
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Astronomy
license_files = LICENSE

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    numpy; scipy; numba

[options.packages.find]
where = .

